# game

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  autogen.sh  configure.ac  package.json  pnpm-lock.yaml  serve.json
scripts/: build.sh  clean.sh  configure.sh  generate-configure.sh  run.sh
src/: Makefile.am  app.cpp  app.hpp  atlas.cpp  atlas.hpp  common.hpp  config.h  config.h.in  defines.hpp  font.cpp  font.hpp  glwrappers.cpp  glwrappers.hpp  main.cpp  render-imgui.cpp  render-imgui.hpp  render-layer.hpp  render-shapes.cpp  render-shapes.hpp  render-sprites.cpp  render-sprites.hpp  render-surface.cpp  render-surface.hpp  window.cpp  window.hpp
